# BTL_VXL

./: CMakeLists.txt  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/communications/: CMakeLists.txt  mqtt.c  mqtt.h  wifi.c  wifi.h
components/display/: CMakeLists.txt  ili9341.c  ili9341.h  ui.c  ui.h  ui_helpers.c  ui_helpers.h
components/display/images/: ui_img_airsense_png.c  ui_img_batterry_png.c  ui_img_co2_png.c  ui_img_co2rz1_png.c  ui_img_humi_png.c  ui_img_humirz1_png.c  ui_img_next1_png.c  ui_img_next2_png.c  ui_img_temp_png.c  ui_img_wwifi1_png.c
components/sensors/: CMakeLists.txt  bme280.c  bme280.h  bmx280_bits.h  mhz14a.c  mhz14a.h  pms7003.c  pms7003.h  sensors.c  sensors.h
main/: CMakeLists.txt  main.c  process.c  process.h
